--- a/themes/plateforme-citoyenne-theme/custom/scss/style/_custom.scss
+++ b/themes/plateforme-citoyenne-theme/custom/scss/style/_custom.scss
@@ -357,3 +357,8 @@ aside .leaflet-map {
 #pro-link-projet {
 	overflow: inherit;
 }
+
+/** Début des correctifs du menu liferay modifié par le theme du site **/
+img.company-logo {
+    margin-right: 0px;
+}
